[project]
name = "astazero_vagyta"
version = "0.1.0"
description = "AstaZero Vagyta data analyser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
az = "astazero_vagyta.cli:main"

[tool.setuptools]
packages = ["astazero_vagyta"]

[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"